homelab/apps/media/base/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
spec:
  ports:
  - port: 5055
