homelab/apps/media/base/jellyseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  annotations:
    tailscale.com/funnel: "false"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - "jellyseerr"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyseerr
            port:
              number: 5055
